file adapter improvements